# llm-inference

./: CMakeLists.txt  NOTE.md  Note_Kernel.md  gemv.cuh  query.md  test_llama_run.py  user_entry.cpp  wrong.md  项目整理.md
examples/cpp/: CMakeLists.txt
examples/cpp/attention/: CMakeLists.txt  self_attn_example.cpp
examples/cpp/ffn/: CMakeLists.txt
kernel_review/RMSNorm/: rmsnorl.ncu-rep  rmsnorm  rmsnorm.cu
kernel_review/embedding/: embedding.ncu-rep  input_embedding  input_embedding.cu
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  act_kernel.h  add_residual.cu  add_residual.h  attn_softmax_kernel.cu  attn_softmax_kernel.h  build_causal_mask.cu  build_causal_mask.h  cal_paddingoffset.cu  cal_paddingoffset.h  concat_past_kv.cu  concat_past_kv.h  cublas_utils.cc  cublas_utils.h  fused_addresidual_norm.cu  fused_addresidual_norm.h  fused_decoder_self_attention.cu  fused_decoder_self_attention.h  fused_transpose_and_remv_pad.cu  fused_transpose_and_remv_pad.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  qkv_bias_and_RoPE.cu  qkv_bias_and_RoPE.h  repeat_kv.cu  repeat_kv.h  rmsnorm_kernel.cu  rmsnorm_kernel.h  sampling.cu  sampling.h  topK.cu  topK.h
src/layers/: CMakeLists.txt
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: CMakeLists.txt  basemodel.h  llama_params.h  tokenizer.h
src/models/llama/: llama.cpp  llama.h
src/utils/: macro.h  model_utils.h  tensor.h  vectorize_utils.h  weight_utils.cu  weight_utils.h
src/weights/: base_weights.h  weight.h
src/weights/llama/: CMakeLists.txt  attention_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.cc  layer_weights.h  llama_weights.cc  llama_weights.h  norm_weights.h
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  test_bias_and_RoPE.cu  test_casual_mask.cu  test_input_embedding.cu  test_linear.cu  test_mask_softmax.cu  test_topk.cu
